<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_about_nanodegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/about_nanodegee" />

    <TextView
        android:id="@+id/tv_about_moviedb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_tmdb"
        android:padding="8dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/moviedb"
        android:contentDescription="@string/the_moviedb_logo" />
</LinearLayout>