<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    tools:context=".ui.moviedetails.MovieDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_movieDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_details">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="@dimen/padding_details_bottom"
                android:paddingTop="@dimen/padding_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_details_bottom"
                android:layout_margin="@dimen/margin_rv_main"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold" />
            <RatingBar
                android:id="@+id/ratingBar"
                style="?attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"
                android:numStars="10"
                android:paddingBottom="8dp"
                android:rating="8.3"
                android:stepSize="0.5"
                android:progressTint="@color/ratingBar"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:background="@android:color/black">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_event_available_24dp"
                    android:padding="2dp"
                    />
                <TextView
                    android:id="@+id/tv_released_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingRight="12dp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border_24dp"
                    android:padding="2dp"
                    />

                <TextView
                        android:id="@+id/tv_user_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:paddingRight="24dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_border_24dp"
                    android:padding="2dp"
                    />

                    <TextView
                        android:id="@+id/tv_popularity_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textSize="18sp"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:contentDescription="@string/the_movie_poster" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_details"
                android:paddingBottom="16dp"/>

            <TextView
                android:id="@+id/tv_trailers_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="@dimen/padding_details_bottom"
                android:paddingTop="@dimen/padding_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#80CBC4"
                android:textStyle="bold"
                android:text="@string/trailers_heading"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical|center"
                android:fadeScrollbars="false"
                android:scrollbars="horizontal"
                android:paddingHorizontal="8dp"
                android:layout_marginVertical="16dp"
                >
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_reviews_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="@dimen/padding_details_bottom"
                android:paddingTop="@dimen/padding_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#80CBC4"
                android:textStyle="bold"
                android:drawableBottom="@color/ratingBar"
                android:text="@string/reviews_heading"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical|center"
                android:fadeScrollbars="false"
                android:scrollbars="horizontal"
                android:layout_marginBottom="16dp">
            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/btn_show_all_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80CBC4"
                android:text="Show All Reviews"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                android:textColor="@android:color/background_dark"
                android:padding="8dp"
                android:layout_gravity="center_horizontal"
                />
            />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="gone"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        />
    <ProgressBar
        android:id="@+id/pb_load_movies"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="gone">
    </ProgressBar>
</FrameLayout>